--- a/Frontend/styles/register.css
+++ b/Frontend/styles/register.css
@@ -5,11 +5,10 @@
     border-radius: 10px;
     padding: 15px;
     margin: 5px;
-    width: 400px;
+    width: 100%;
 }
 
 .register-button {
-    width: 400px;
     margin: 10px;
     padding: 15px;
     background-color: #0cafe5;
@@ -17,6 +16,7 @@
     font-size: 15px;
     border: 0;
     border-radius: 10px;
+    width: 100%;
 }
 
 @keyframes hoverFade {
@@ -34,16 +34,33 @@
 }
 
 .register-facebook {
-    width: 400px;
     background-color: #4267B2;
     color: #fff;
     border: none;
     font-size: 18px;
     padding: 10px;
     border-radius: 10px;
+    width: 100%;
 }
 
 .register-facebook:hover {
+    animation: hoverFade 0.1s forwards;
+    cursor: pointer;
+}
+
+
+.register-google {
+    background-color: #DB4437;
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.register-google:hover {
     animation: hoverFade 0.1s forwards;
     cursor: pointer;
 }
