--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -7,6 +7,12 @@ body {
   background-color: #eee;
 }
 
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -14,4 +20,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.icon-adjust {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
