--- a/Frontend/styles/home.css
+++ b/Frontend/styles/home.css
@@ -115,3 +115,21 @@
     flex-direction: column;
   }
 }
+
+
+.intro-container {
+  background-color: #0cafe5;
+  color: #fff;
+  padding: 10px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+
+.about-container {
+  background-color: #fff;
+  color: #0cafe5;
+  padding: 10px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
