--- a/Frontend/styles/home.css
+++ b/Frontend/styles/home.css
@@ -135,6 +135,13 @@
 
 .tabs-card {
   background-color: #fff;
-  padding: 10px;
+  padding: 20px;
   margin: 15px;
+  text-align: center;
+}
+
+
+.tab-title {
+  font-family: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  font-weight: 700;
 }
