changing job styles

--- a/Frontend/styles/jobs.css
+++ b/Frontend/styles/jobs.css
@@ -1,10 +1,12 @@
 .jobs-container {
     width: 100%;
     background-color: #fff; 
-    padding: 20px
+    padding: 20px;
+    border-bottom: 2px solid #eee;
 }
 
 .price-tab {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
