--- a/Frontend/styles/register.css
+++ b/Frontend/styles/register.css
@@ -19,6 +19,18 @@
     width: 100%;
 }
 
+
+.register-button-disabled {
+    margin: 10px;
+    padding: 15px;
+    background-color: #05526b;
+    color: #fff;
+    font-size: 15px;
+    border: 0;
+    border-radius: 10px;
+    width: 100%;
+}
+
 @keyframes hoverFade {
     from {
         opacity: 100%;
